tests/ui/type/issue-58355.stderr
error[E0277]: the size for values of type `dyn ToString` cannot be known at compilation time
  --> $DIR/issue-58355.rs:5:14
   |
LL |     x = Some(Box::new(callback));
   |              ^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `fn() -> dyn ToString`, the trait `Sized` is not implemented for `dyn ToString`
   = note: required because it appears within the type `fn() -> dyn ToString`
   = note: required for the cast from `Box<fn() -> dyn ToString>` to `Box<dyn Fn() -> (dyn ToString + 'static)>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
